Bug 290888 - missing tabs on torrent page
Summary: missing tabs on torrent page
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-07 15:24 UTC by nucleo
Modified: 2012-01-14 14:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nucleo 2012-01-07 15:24:25 UTC
Version:           unspecified
OS:                Linux

Tabs on torrent page disappeared after updating to ktorrent-4.2rc1.

Reproducible: Didn't try

Steps to Reproduce:
1. Open torrent page
2. Close groups tree

Actual Results:  
It is impossible to switch for example between downloads/uploads when groups tree closed. Groups tree should be opened every time before switching.

Expected Results:  
KTorrent UI behavior should be similar to common for other KDE applications.
Konqueror by default not shows tabs if only one tab opened, tabs shown for two or more tabs, it also have option to show tabs for one tab.
Comment 1 Joris Guisson 2012-01-14 12:06:11 UTC
Git commit c25525b3e17b670821470b6642e78d7dd3d349b8 by Joris Guisson.
Committed on 14/01/2012 at 13:05.
Pushed by guisson into branch 'master'.

Add new group switcher combobox in toolbar

M  +2    -1    ktorrent/CMakeLists.txt
M  +7    -4    ktorrent/dialogs/fileselectdlg.cpp
M  +3    -2    ktorrent/dialogs/pastedialog.cpp
M  +3    -2    ktorrent/dialogs/torrentcreatordlg.cpp
A  +137  -0    ktorrent/groups/groupmodel.cpp     [License: GPL (v2+)]
C  +36   -21   ktorrent/groups/groupmodel.h [from: libktcore/groups/ungroupedgroup.cpp - 061% similarity]
M  +18   -30   ktorrent/groups/groupview.cpp
M  +2    -5    ktorrent/groups/groupview.h
M  +2    -1    ktorrent/kttorrentactivityui.rc
M  +29   -2    ktorrent/torrentactivity.cpp
M  +6    -0    ktorrent/torrentactivity.h
M  +7    -4    ktorrent/view/view.cpp
M  +3    -0    ktorrent/view/view.h
M  +11   -8    libktcore/dbus/dbus.cpp
M  +51   -56   libktcore/groups/groupmanager.cpp
M  +13   -17   libktcore/groups/groupmanager.h
M  +2    -2    libktcore/groups/ungroupedgroup.cpp
M  +8    -5    plugins/scanfolder/scanfolderprefpage.cpp
M  +0    -1    plugins/scripting/api/scriptingmodule.cpp

http://commits.kde.org/ktorrent/c25525b3e17b670821470b6642e78d7dd3d349b8
Comment 2 Joris Guisson 2012-01-14 12:08:17 UTC
Git commit 699904a03f57a7394e48e4322652bac2399f3a37 by Joris Guisson.
Committed on 14/01/2012 at 13:05.
Pushed by guisson into branch '4.2'.

Backport to 4.2: Add new group switcher combobox in toolbar

M  +2    -1    ktorrent/CMakeLists.txt
M  +7    -4    ktorrent/dialogs/fileselectdlg.cpp
M  +3    -2    ktorrent/dialogs/pastedialog.cpp
M  +3    -2    ktorrent/dialogs/torrentcreatordlg.cpp
A  +137  -0    ktorrent/groups/groupmodel.cpp     [License: GPL (v2+)]
C  +36   -21   ktorrent/groups/groupmodel.h [from: libktcore/groups/ungroupedgroup.cpp - 061% similarity]
M  +18   -30   ktorrent/groups/groupview.cpp
M  +2    -5    ktorrent/groups/groupview.h
M  +2    -1    ktorrent/kttorrentactivityui.rc
M  +29   -2    ktorrent/torrentactivity.cpp
M  +6    -0    ktorrent/torrentactivity.h
M  +7    -4    ktorrent/view/view.cpp
M  +3    -0    ktorrent/view/view.h
M  +11   -8    libktcore/dbus/dbus.cpp
M  +51   -56   libktcore/groups/groupmanager.cpp
M  +13   -17   libktcore/groups/groupmanager.h
M  +2    -2    libktcore/groups/ungroupedgroup.cpp
M  +8    -5    plugins/scanfolder/scanfolderprefpage.cpp
M  +0    -1    plugins/scripting/api/scriptingmodule.cpp

http://commits.kde.org/ktorrent/699904a03f57a7394e48e4322652bac2399f3a37
Comment 3 nucleo 2012-01-14 14:18:12 UTC
Group switcher in toolbar is a possible solution
http://img861.imageshack.us/img861/5056/ktorrent.png

Using of tabs was more simple because it was possible to switch between groups in one click but with switcher I need to click on it, scroll to needed group and click on group name.
Comment 4 nucleo 2012-01-14 14:52:26 UTC
Maybe it is makes sense to make dorpdown list more large to avoid at least scrolling?