Add new group switcher combobox in toolbar

BUG: 290888